--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
     "mongoose": "^5.11.17",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
     "nodemailer-mailgun-transport": "^2.0.2",
     "nodemon": "^2.0.7",
